--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GTWetter</title>
     <script>
-        let data = "Hallo, ich bin ein Testtext!";
+        let data = "Dies ist der Standardtext, der im Skript gespeichert wird.";
     </script>
 </head>
 <body>
-    <h1>Kein Mensch sollte hier sein.</h1>
-    <div id="data" style="display:none;">{{ data }}</div>
 </body>
 </html>
