--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>
-        let data = "Dies ist der Standardtext, der im Skript gespeichert wird.";
+        let data = "Heute ist der 22. 12 2024, ein kalter Wintertag! In nur 2 Tagen ist schon Weihnachten, und viele haben bereits die ersten Schneeflocken gesehen. \nEs ist draußen um die 0°C, überwiegend bewölkt und stürmisch.\nWenn du nach draußen gehst, pass auf – es gibt eine Glättewarnung!";
     </script>
 </head>
 <body>
