--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>
         let data = "Heute ist der 22. 12 2024, ein kalter Wintertag! In nur 2 Tagen ist schon Weihnachten, und viele haben bereits die ersten Schneeflocken gesehen. \nEs ist draußen um die 0°C, überwiegend bewölkt und stürmisch.\nWenn du nach draußen gehst, pass auf – es gibt eine Glättewarnung!";
+        let temp = "22";
+        let weather = ["überwiegend bewölkt", "stürmisch"];
+        let update = true;
     </script>
 </head>
 <body>
