--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>
         let data = "Heute ist der 22. 12 2024, ein kalter Wintertag! In nur 2 Tagen ist schon Weihnachten, und viele haben bereits die ersten Schneeflocken gesehen. \nEs ist draußen um die 0°C, überwiegend bewölkt und stürmisch.\nWenn du nach draußen gehst, pass auf – es gibt eine Glättewarnung!";
-        let temp = "1";https://github.com/Gilered-Thalion/GTWetter/blob/main/index.html
+        let temp = "1";
         let weather = ["überwiegend bewölkt", "es gibt leichte Schneeschauer"];
         let update = true;
     </script>
