--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         let data = "Heute ist der 23. 12 2024, ein kalter Wintertag! Schon Morgen ist Weihnachten, und viele haben bereits die ersten Schneeflocken gesehen. \nEs ist draußen um die 1°C, überwiegend bewölkt und es gibt Schneeschauer.\nWenn du nach draußen gehst, pass auf – es gibt eine Glättewarnung!";
         let temp = "1";
         let weather = ["überwiegend bewölkt", "es gibt leichte Schneeschauer"];
-        let update = true;
+        let update = false;
     </script>
 </head>
 <body>
