--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>
-        let data = "Heute ist Dienstag, der 24. 12 2024, ein kalter Wintertag! Heute ist Weihnachten, und viele haben bereits die ersten Schneeflocken gesehen. \nEs ist draußen um die 1°C, überwiegend bewölkt und es gibt leichte Regen- und Schneeschauer.\nWenn du nach draußen gehst, pass auf – es gibt eine Glättewarnung und vergiss deinen Regenschrim nicht!\nIch wünsche dir ein wunderschönes Weihnachtsfest!";
-        let temp = "1";
-        let weather = ["überwiegend bewölkt", "es gibt leichte Schneeschauer"];
+        let data = "Heute ist Mittwoch, der 25. 12 2024, ein kalter Wintertag!\nEs ist draußen um die -4°C, teils bewölkt.\nWenn du nach draußen gehst, pass auf – es gibt eine Glättewarnung!";
+        let temp = "-4";
+        let weather = ["teils bewölkt", "es gibt leichte Schneeschauer"];
         let update = false;
     </script>
 </head>
