--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>
-        let data = "Heute ist Dienstag, der 31.12.2024, ein kalter Wintertag!\nEs ist draußen um die -6°C, Wolkenlos.\nWenn du nach draußen gehst, pass auf – es gibt eine Glättewarnung!\nEinen guter Tag, um drinnen zu bleiben, und die Wärme zu genießen!\nIch wünsche dir einen erfolgreichen Arbeitstag!";
+        let data = "Heute ist Mittwoch, der 1.1.2025!\nEs ist draußen um die -2°C, klar und vereinzelt Wolken.\nWenn du nach draußen gehst, pass auf – es gibt eine Glättewarnung!\nIch wünsche dir einen erfolgreichen Arbeitstag!";
         let temp = "-4";
         let weather = ["teils bewölkt", "es gibt leichte Schneeschauer"];
         let update = false;
