--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>
-        let data = "Heute ist Donnerstag, der 2.1.2024, ein warmer Wintertag!\nEs ist draußen um die 7°C, Stark bewölkt.\nWenn du nach draußen gehst, pass auf – vergiss deinen Regenschirm nicht!\nIch wünsche dir einen erfolgreichen Arbeitstag!";
+        let data = "Heute ist Freitag, der 3.1.2024!\nEs ist draußen um die -3°C, Stark bewölkt.\nWenn du nach draußen gehst, pass auf – es gibt eine Glättewarnung und vergiss deinen Regenschirm nicht!\nIch wünsche dir einen erfolgreichen Arbeitstag!";
         let temp = "-4";
         let weather = ["teils bewölkt", "es gibt leichte Schneeschauer"];
         let update = false;
