--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>
-        let data = "Heute ist Freitag, der 3.1.2024!\nEs ist draußen um die -3°C, Stark bewölkt.\nWenn du nach draußen gehst, pass auf – es gibt eine Glättewarnung und vergiss deinen Regenschirm nicht!\nIch wünsche dir einen erfolgreichen Arbeitstag!";
+        let data = "Heute ist Samstag, der 4.1.2024, ein kalter Wintertag!\nEs ist draußen um die -9°C, Wolkenlos.\nIch wünsche dir einen fröhlichen Feiertag!";
         let temp = "-4";
         let weather = ["teils bewölkt", "es gibt leichte Schneeschauer"];
         let update = false;
