--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>
-        let data = "Heute ist Samstag, der 4.1.2024, ein kalter Wintertag!\nEs ist draußen um die -9°C, Wolkenlos.\nIch wünsche dir einen fröhlichen Feiertag!";
+        let data = "Heute ist Sonntag, der 5.1.2024!\nEs ist draußen um die -2°C, es gibt Schneeschauer.\nIch wünsche dir einen fröhlichen Feiertag!";
         let temp = "-4";
         let weather = ["teils bewölkt", "es gibt leichte Schneeschauer"];
         let update = false;
