--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>
-        let data = "Heute ist Montag, der 6.1.2024!\nEs ist draußen um die 0°C, Stark bewölkt.\nIch wünsche dir einen fröhlichen Feiertag!";
+        let data = "Heute ist Dienstag, der 7.1.2024, ein warmer Wintertag!\nEs ist draußen um die 6°C, Leichter Regen.\nIch wünsche dir einen fröhlichen Feiertag!";
         let temp = "-4";
         let weather = ["teils bewölkt", "es gibt leichte Schneeschauer"];
         let update = false;
