--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>
-        let data = "Heute ist Dienstag, der 7.1.2024, ein warmer Wintertag!\nEs ist draußen um die 6°C, Leichter Regen.\nIch wünsche dir einen fröhlichen Feiertag!";
+        let data = "Heute ist Mittwoch, der 8.1.2024!\nEs ist draußen um die 1°C, Stark bewölkt.\nIch wünsche dir einen erfolgreichen Arbeitstag!";
         let temp = "-4";
         let weather = ["teils bewölkt", "es gibt leichte Schneeschauer"];
-        let update = false;
+        let update = true;
     </script>
 </head>
 <body>
