--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>
-        let data = "Heute ist Mittwoch, der 8.1.2024!\nEs ist draußen um die 1°C, Stark bewölkt.\nIch wünsche dir einen erfolgreichen Arbeitstag!";
+        let data = "Heute ist Freitag, der 10.1.2024!\nEs ist draußen um die -1°C, Teils bewölkt.\nWenn du nach draußen gehst, pass auf – es gibt eine Glättewarnung!\nIch wünsche dir einen erfolgreichen Arbeitstag!";
         let temp = "-4";
         let weather = ["teils bewölkt", "es gibt leichte Schneeschauer"];
         let update = true;
