--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>
-        let data = "Heute ist Samstag, der 11.1.2024, ein kalter Wintertag!\nEs ist draußen um die -7°C, Klar und vereinzelt Wolken.\nWenn du nach draußen gehst, pass auf – es gibt eine Glättewarnung!\nIch wünsche dir einen fröhlichen Feiertag!";
+        let data = "Heute ist Sonntag, der 12.1.2024!\nEs ist draußen um die -3°C, Stark bewölkt.\nWenn du nach draußen gehst, pass auf – es gibt eine Glättewarnung!\nIch wünsche dir einen fröhlichen Feiertag!";
         let temp = "-4";
         let weather = ["teils bewölkt", "es gibt leichte Schneeschauer"];
         let update = true;
