--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>
-        let data = "Heute ist Dienstag, der 14.1.2024, ein kalter Wintertag!\nEs ist draußen um die -8°C, Klar und vereinzelt Wolken.\nWenn du nach draußen gehst, pass auf – es gibt eine Glättewarnung!\nIch wünsche dir einen erfolgreichen Arbeitstag";
+        let data = "Heute ist Null, der Null.Null.Null, ein kalter Wintertag!\nEs ist draußen um die -8°C, Klar und vereinzelt Wolken.\nWenn du nach draußen gehst, pass auf – es gibt eine Glättewarnung!\nIch wünsche dir einen erfolgreichen Arbeitstag!";
         let temp = "-4";
         let weather = ["teils bewölkt", "es gibt leichte Schneeschauer"];
         let update = true;
